--- a/kn05/cloud-init-db.yml
+++ b/kn05/cloud-init-db.yml
@@ -12,5 +12,11 @@ ssh_pwauth: false
 disable_root: false
 package_update: true
 packages:
-  - curl 
-  - wget 
+  - curl
+  - wget
+  - mariadb-server
+runcmd:
+  - sudo mysql -sfu root -e "GRANT ALL ON *.* TO 'admin'@'%' IDENTIFIED BY 'root' WITH GRANT OPTION;"
+  - sudo apt update
+  - sudo sed -i 's/127.0.0.1/0.0.0.0/g' /etc/mysql/mariadb.conf.d/50-server.cnf
+  - sudo systemctl restart mariadb.service
